- Os retornos das apostas agora são reduzidos por impostos. Quanto maior seu retorno, maiores os impostos (governo é ladrão, fazer o que).
- Link para o servidor de suporte nos componentes de `/status menhera`
- Adicionado a quantidade de bênçãos à ficha no início do comando
- Novos comandos de reset:
  - `/resetar bencaos` - Reseta suas bênçãos por um certo custo
  - `/resetar ficha` - Reseta sua conta do RPG. Tu pode criar outra a qualquer moment

### Changed

- Agora o botão de fechar comando possui um texto para ser mais claro
- Dificuldade de subir de nível foi aumentado para `1.62`
- Tempo de resposta da Dungeon foi aumentado para `20s`
- Chance de critico de inimigos foi alterada. **1x**: `70%` -> `75%`. **1.3x:** `16%` -> `11%`
- A seleção de bênçãos no componente foi limitada para 15, já que não faz sentido ter 25 pois nem da pra selecionar algo maior que 15
- O Comando `/give` foi renomeado para `/presentear`
- O Comando `/meme fodase` foi renomeado para `/meme fds`s
- Nível de Batalha foi aumentado para `20`

### Fixed

- Árvore de Habilidades do Assassino estava com uma ordem errada
- Opção de abençõar status com pontos maior que 15, bloqueando o usuário de usar mais bênçãos
- Erros de português no comando `/ship`
- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
- Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord
- Habilidades ignoravam a chance de acerto, fazendo com que sempre acertassem, mesmo que o usuário a errasse
- Habiliades de cura não ultrapassam mais o limite de vida
- Buffs de raças que não eram contabilizados
- Efeitos do **DEFENSOR** Não são mais infinitas
- Resolvido problema do veneno que ignorava armaduras

### Removed

- Colocação do usuário no top ao caçar
- Comando `/xandao`