@@ -11,7 +11,8 @@
     "postinstall": "husky install",
     "build": "rm -rf dist && tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "start": "VERSION=$npm_package_version NODE_ENV=production node .",
-    "dev": "VERSION=$npm_package_version NODE_ENV=development node .",
+    "dev": "VERSION=$npm_package_version NODE_ENV=development TESTING=true node .",
+    "canary": "VERSION=$npm_package_version NODE_ENV=development node .",
     "run:dev": "npm run build && npm run dev",
     "deploy": "pm2 start \"npm run start\" --name MenheraBot ",
     "lint:fix": "eslint --fix .",
