@@ -879,5 +879,13 @@
         "description": "**ATTENTION**\n\nBy clicking the button below, you will erase ALL your **RPG data**\nYour Menhera account will still exist, only your data regarding the RPG will be lost\n\nThis will only cause your character to be deleted. You will be able to create another character whenever you want.\n\nStats such as PvP wins will still be linked to your account.\n\nAre you sure you want to do this?"
       }
     }
+  },
+  "badges": {
+    "title": "Your Badges",
+    "footer": "Select the badges that you want to NOT appears in your profile",
+    "select-all": "Select All",
+    "diselect-all": "Remove All Options",
+    "success": "Your choices has been selected",
+    "badge-info": "_{{description}}_\n**Acquired in**: <t:{{unix}}:d>\n**Badge ID**: {{id}}\n**Rarity:** {{rarity}}"
   }
 }
